# hover-dict

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml  extension.toml
.github/workflows/: release.yml
crates/hover-dict-ls/: Cargo.toml  build.rs
crates/hover-dict-ls/src/: config.rs  dict.rs  main.rs  markdown.rs  query.rs  reverse_query.rs  word.rs
crates/hover-dict-ls/src/utils/: format.rs  mod.rs
crates/hover-dict-ls/tests/: e2e.rs
scripts/: dev-install.sh
src/: lib.rs
