[package]
name = "hover-dict-ls"
version.workspace = true
edition = "2021"
repository = "https://github.com/Nahida-aa/hover-dict"

[[bin]]
name = "hover-dict-ls"
path = "src/main.rs"

[dependencies]
clap = "4.5.49"
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.48.0", features = ["io-std", "macros", "process", "rt-multi-thread"], default-features = false }
tower-lsp = "0.20.0"

[dev-dependencies]
tempfile = "3"
